deployment-specs.yml
apiVersion: v1
kind: Service
metadata:
  name: efse-test-succ
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: efse-test-succ
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: efse-test-succ
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: efse-test-succ
    spec:
      strategy:
        - type: RollingUpdate
      containers:
        - name: efse-test-succ
          image: IMAGE_VARIABLE_1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html/efse/files
              name: efse-files-vol

      volumes:
        - name: efse-files-vol
          persistentVolumeClaim:
            claimName: efse-files-vol-claim
---
apiVersion: v1
kind: Route
metadata:
  name: efse-test-succ
spec:
  host: efse-test-succ.sit.domain.com
  to:
    kind: Service
    name: efse-test-succ
